# primi-ball-balance

./: CMakeLists.txt  README.md  TODOs.md  run_perception.sh  run_rgbCam.sh  run_touch.sh  setup_cluster.sh
include/: BallDetector.h  DetectorOutputStruct.h  ImagePreprocessor.h  PreprocessedFrame.h
src/: BallDetector.cpp  ImagePreprocessor.cpp  Proprio_reader.cpp  Robot_control.cpp  Touch_reader.cpp  eventCam_reader.cpp  rgbCam_reader.cpp  test_ball_detector.cpp  test_preprocessor.cpp
